Closed Bug 290214 Opened 21 years ago Closed 21 years ago

SetPMPrintSettings releases page format instead of print settings

Categories

(Core Graveyard :: GFX: Mac, defect, P2)

PowerPC
macOS
defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.8beta3

People

(Reporter: tony, Assigned: jaas)

Details

(Whiteboard: patch)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-ca) AppleWebKit/125.5.7 (KHTML, like Gecko) Safari/125.12 Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7.6) Gecko/20050317 Firefox/1.0.2 I tried implementing nsPrinterEnumerator for Mac OS X and discovered that nsPrintSettingsX:: SetPMPrintSettings releases mPageFormat instead of mPrintSettings. When PMSessionPageSetupDialog is called, it returns kPMInvalidPageFormat. Reproducible: Always Steps to Reproduce: 1. Obtain an nsPrintSettingsX object. 2. Call SetPMPrintSettings to set the print settings. 3. Call up the Page Setup dialog. Actual Results: Nothing happens. Expected Results: The Page Setup dialog should appear.
Attachment #180611 - Flags: review?(pinkerton)
Comment on attachment 180611 [details] [diff] [review] Patch to fix the error described. good catch, r=pink
Attachment #180611 - Flags: review?(pinkerton) → review+
We should get this in.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking1.8b3?
Priority: -- → P2
Whiteboard: patch
Target Milestone: --- → mozilla1.8beta3
Attachment #180611 - Flags: superreview+
Attachment #180611 - Flags: approval1.8b3?
Comment on attachment 180611 [details] [diff] [review] Patch to fix the error described. a=me for 1.8b3. /be
Attachment #180611 - Flags: approval1.8b3? → approval1.8b3+
landed on trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Flags: blocking1.8b3?
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: