SetPMPrintSettings releases page format instead of print settings <- fix that. b=290214 r=pinkerton sr=smfr a=brendan